# ChangeLog for games-action/bzflag
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-action/bzflag/ChangeLog,v 1.16 2005/01/27 13:16:38 wolf31o2 Exp $

  27 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  bzflag-1.10.8.20041007.ebuild, bzflag-2.0.0.20050117.ebuild:
  Adjusting LICENSE and closing bug #79700.

*bzflag-2.0.0.20050117 (24 Jan 2005)

  24 Jan 2005; Mike Frysinger <vapier@gentoo.org>
  +bzflag-2.0.0.20050117.ebuild:
  Version bump #78438.

*bzflag-1.10.8.20041007 (08 Nov 2004)

  08 Nov 2004; Michael Sterrett <mr_bones_@gentoo.org>
  +bzflag-1.10.8.20041007.ebuild:
  version bump (bug #66474)

  10 Jun 2004; Michael Sterrett <mr_bones_@gentoo.org>
  bzflag-1.10.6.20040515-r1.ebuild, bzflag-1.10.6.20040515.ebuild:
  filter the -fno-default-inline flag - patch from Joerg Schaible via bug #53501

*bzflag-1.10.6.20040515-r1 (08 Jun 2004)

  08 Jun 2004; Michael Sterrett <mr_bones_@gentoo.org>
  bzflag-1.10.6.20040515-r1.ebuild:
  rev bump for dedicated use flag support (bug #53079)
  patch from Thomas R. Sibley

  03 Jun 2004; Michael Sterrett <mr_bones_@gentoo.org> bzflag-1.10.4.ebuild:
  sed in unpack; fix use invocation; tidy

  27 May 2004; Michael Sterrett <mr_bones_@gentoo.org>
  bzflag-1.10.6.20040515.ebuild:
  error check sed

*bzflag-1.10.6.20040515 (17 May 2004)

  17 May 2004; Mike Frysinger <vapier@gentoo.org>
  +bzflag-1.10.6.20040515.ebuild:
  Version bump #51230 by Tupone Alfredo

  19 Apr 2004; Chris Gianelloni <wolf31o2@gentoo.org> bzflag-1.10.4.ebuild:
  Marking stable on amd64 (no bugs in 84 days).

  15 Apr 2004; Danny van Dyk <kugelfang@gentoo.org> bzflag-1.10.4.ebuild:
  Minor changes to make it work on ~amd64, marked ~amd64.

*bzflag-1.10.4 (26 Jan 2004)

  26 Jan 2004; Michael Sterrett <mr_bones_@gentoo.org> bzflag-1.10.4.ebuild:
  version bump

*bzflag-1.10.2 (15 Jan 2004)

  15 Jan 2004; Michael Sterrett <mr_bones_@gentoo.org> bzflag-1.10.2.ebuild: